# egglog_wrap_test

./: .gitignore  Cargo.toml
crates/egglog_macros/: Cargo.toml
crates/egglog_macros/src/: helper.rs  lib.rs
crates/egglog_wrapper/: Cargo.toml
crates/egglog_wrapper/src/: lib.rs  macros.rs  rx.rs  rx_minimal.rs  rx_vt.rs  tx.rs  tx_minimal.rs  tx_rx_vt.rs  tx_vt.rs  wrap.rs
examples/: dsl_commit.rs  dsl_commit1.rs  dsl_commit2.rs  dsl_commit3.rs  dsl_cycle.rs  dsl_get.rs  dsl_locate.rs  dsl_set.rs  dsl_use.rs  dsl_use_simple.rs  rx_minimal.rs  term.rs  tx_minimal.rs  tx_rx_vt.rs  version_ctl.rs
src/: main.rs
