[package]
name = "egglog_test"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
inventory = "0.3.20"
egglog_macros = { path = "crates/egglog_macros"}
egglog_wrapper = { path = "crates/egglog_wrapper"}
egglog = "0.4.0"
symbol_table = "0.4.0"
derive_more = { version = "2.0.1", features = ["full"] }
heck = "0.5.0"
bevy_ecs = "0.16.1"

[dependencies]
egglog_macros.workspace = true
egglog_wrapper.workspace = true
egglog.workspace = true 
tokio = { version = "1.45.1", features = ["default", "full", "rt-multi-thread"] }
inventory.workspace = true
derive_more.workspace = true
bevy_ecs.workspace = true