[package]
name = "egglog_wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
inventory.workspace = true
egglog_macros.workspace = true
symbol_table.workspace = true
derive_more.workspace = true
egglog.workspace = true
smallvec = "1.15.0"
dashmap.workspace = true
log = "0.4.27"
impl-trait-for-tuples = { git= "https://github.com/Polanas/impl-trait-for-tuples"}
tuples = "1.17.0"
